# memex_rl

./: .gitignore  README.md  pyproject.toml
configs/: alfworld.yaml  default.yaml  training.yaml
scripts/: convert_sft_to_mlx.py  evaluate.py  evaluate_lora.py  generate_sft_data.py  run_agent.py  train_memexrl.py
src/: __init__.py
src/agent/: __init__.py  loop.py  prompts.py  tool_parser.py
src/environments/: __init__.py  alfworld_env.py  base.py  stress_test.py
src/llm/: __init__.py  backend.py  openai_backend.py  sglang_backend.py
src/memory/: __init__.py  anchor.py  controller.py  store.py  tokenizer.py
src/models/: __init__.py  memory.py  tools.py  trajectory.py
src/training/: __init__.py  grpo.py  mlx_grpo.py  rewards.py  rollout.py  trajectory.py
tests/: test_agent_loop.py  test_anchor.py  test_controller.py  test_e2e.py  test_environments.py  test_llm_backend.py  test_models_and_tokenizer.py  test_rewards.py  test_sglang_backend.py  test_store.py  test_tool_parser.py  test_trajectory_grpo.py
